<resources>
    <string name="app_name">Chat Dev-intensive</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="error.repo_url_is_not_valid">Невалидный адрес репозитория</string>
    <string name="menu_search_title">Поиск</string>
    <string name="snackbar_archive_cancel">Отмена</string>
    <string name="hint.enter_user_name">Введите имя пользователя</string>
    <string name="title.create_group">Создание группы</string>
</resources>