<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileActivity"
    tools:ignore="ContentDescription">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
            android:id="@+id/profile_header_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_bg"
            app:aspectRatio="1.78" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_16"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btn_switch_theme"
                    android:layout_width="@dimen/profile_rounded_btn_size_40"
                    android:layout_height="@dimen/profile_rounded_btn_size_40"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/spacing_32"
                    android:layout_toStartOf="@+id/iv_avatar"
                    android:background="@drawable/btn_round_bg"
                    android:src="@drawable/ic_switch_day_night" />

                <ru.skillbranch.devintensive.ui.custom.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/profile_rounded_avatar_size"
                    android:layout_height="@dimen/profile_rounded_avatar_size"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/avatar_default" />

                <ImageButton
                    android:id="@+id/btn_edit"
                    android:layout_width="@dimen/profile_rounded_btn_size_40"
                    android:layout_height="@dimen/profile_rounded_btn_size_40"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/spacing_32"
                    android:layout_toEndOf="@+id/iv_avatar"
                    android:background="@drawable/btn_round_bg"
                    android:src="@drawable/ic_edit_day_night" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_nick_name"
                style="@style/Profile.Header.Nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/tv_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:text="Junior Android Developer" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccentedSurface"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_16"
            android:paddingBottom="@dimen/spacing_16">

            <TextView
                android:id="@+id/tv_rating"
                style="@style/Profile.Metrics.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_skillbranch_24"
                tools:text="0" />

            <TextView
                style="@style/Profile.Metrics.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_rating" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/line_size_1"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginBottom="@dimen/spacing_16"
            android:background="?attr/colorDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_16"
            android:paddingBottom="@dimen/spacing_16">

            <TextView
                android:id="@+id/tv_respect"
                style="@style/Profile.Metrics.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_respect_24"
                tools:text="0" />

            <TextView
                style="@style/Profile.Metrics.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_respect" />

        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/Profile.InfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ic_avatar"
                    android:layout_width="@dimen/profile_rounded_btn_size_40"
                    android:layout_height="@dimen/profile_rounded_btn_size_40"
                    android:src="@drawable/ic_avatar" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wr_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_16"
                    android:layout_toEndOf="@id/ic_avatar">

                    <EditText
                        android:id="@+id/et_first_name"
                        style="@style/Profile.EditText.Single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_hint_first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        tools:text="John" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wr_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/wr_first_name"
                    android:layout_marginStart="@dimen/spacing_16"
                    android:layout_toEndOf="@id/ic_avatar">

                    <EditText
                        android:id="@+id/et_last_name"
                        style="@style/Profile.EditText.Single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_hint_last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        tools:text="Doe" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size_1"
                android:layout_marginStart="@dimen/spacing_72"
                android:background="?attr/colorDivider" />

            <LinearLayout
                style="@style/Profile.InfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/profile_rounded_btn_size_40"
                    android:layout_height="@dimen/profile_rounded_btn_size_40"
                    android:src="@drawable/ic_about" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wr_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_16">

                    <EditText
                        android:id="@+id/et_about"
                        style="@style/Profile.EditText.MultiLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_hint_about"
                        android:imeOptions="actionNext"
                        tools:text="Some text about me asdas asd asd asdasdasd asd as" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size_1"
                android:layout_marginStart="@dimen/spacing_72"
                android:background="?attr/colorDivider" />

            <LinearLayout
                style="@style/Profile.InfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/profile_rounded_btn_size_40"
                    android:layout_height="@dimen/profile_rounded_btn_size_40"
                    android:src="@drawable/ic_repo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wr_repository"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_16"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/spacing_4">

                    <EditText
                        android:id="@+id/et_repository"
                        style="@style/Profile.EditText.Single"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_hint_repository"
                        android:imeOptions="actionDone"
                        android:inputType="textUri"
                        tools:text="http://github.com/makweb" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ic_eye"
                    android:layout_width="@dimen/size_24"
                    android:layout_height="@dimen/size_24"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/spacing_16"
                    android:src="@drawable/ic_eye_24dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>