<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_bg" />

    <ru.skillbranch.devintensive.ui.custom.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/profile_rounded_avatar_size"
        android:layout_height="@dimen/profile_rounded_avatar_size"
        android:src="@drawable/avatar_default"
        app:cv_borderOverlay="true"
        app:cv_borderWidth="2dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_nick_name"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/btn_switch_theme"
        android:layout_width="@dimen/profile_rounded_btn_size_40"
        android:layout_height="@dimen/profile_rounded_btn_size_40"
        android:layout_marginEnd="@dimen/spacing_32"
        android:background="@drawable/btn_round_bg"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:srcCompat="@drawable/ic_switch_day_night" />

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="@dimen/profile_rounded_btn_size_40"
        android:layout_height="@dimen/profile_rounded_btn_size_40"
        android:layout_marginStart="@dimen/spacing_32"
        android:background="@drawable/btn_round_bg"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:srcCompat="@drawable/ic_edit_day_night" />

    <TextView
        android:id="@+id/tv_nick_name"
        style="@style/Profile.Header.Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        app:layout_constraintBottom_toTopOf="@+id/tv_rank"
        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        tools:text="John Doe" />

    <TextView
        android:id="@+id/tv_rank"
        style="@style/Profile.Header.Rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_32"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_nick_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_nick_name"
        tools:text="Junior Android Developer" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_80"
        android:background="?attr/colorAccentedSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/line_size_1"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_16"
        android:background="?attr/colorDivider"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/tv_rating"
        style="@style/Profile.Metrics.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_skillbranch_24"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="0" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Profile.Metrics.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_label_rating"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

    <TextView
        android:id="@+id/tv_respect"
        style="@style/Profile.Metrics.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_respect_24"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="0" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Profile.Metrics.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_label_respect"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/tv_respect"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_respect"
        app:layout_constraintTop_toBottomOf="@+id/tv_respect" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/profile_rounded_btn_size_40"
        android:layout_height="@dimen/profile_rounded_btn_size_40"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/ic_avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            style="@style/Profile.EditText.Single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_first_name"
            tools:text="John" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/wr_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            style="@style/Profile.EditText.Single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_last_name"
            tools:text="Doe" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="@dimen/line_size_1"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/profile_divider_margin"
        android:layout_marginEnd="@dimen/spacing_16"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/wr_last_name" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/profile_rounded_btn_size_40"
        android:layout_height="@dimen/profile_rounded_btn_size_40"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:srcCompat="@drawable/ic_about" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_about"
            style="@style/Profile.EditText.MultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_about"
            tools:text="asdas" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="@dimen/line_size_1"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/profile_divider_margin"
        android:layout_marginEnd="@dimen/spacing_16"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/wr_about" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/profile_rounded_btn_size_40"
        android:layout_height="@dimen/profile_rounded_btn_size_40"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:srcCompat="@drawable/ic_repo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/ic_eye"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_repository"
            style="@style/Profile.EditText.Single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_repository"
            tools:text="sadasd" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/ic_eye"
        android:layout_width="@dimen/size_24"
        android:layout_height="@dimen/size_24"
        android:layout_marginEnd="@dimen/spacing_16"
        app:layout_constraintBottom_toBottomOf="@+id/wr_repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wr_repository"
        app:layout_constraintTop_toTopOf="@+id/wr_repository"
        app:srcCompat="@drawable/ic_eye_24dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>